[gd_scene load_steps=3 format=3 uid="uid://cncaqxlg835ci"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud"]
[ext_resource type="Script" path="res://scripts/ui/reticle.gd" id="2_reticle"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 40.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 45.0
offset_right = 200.0
offset_bottom = 65.0
grow_horizontal = 0
text = "HP: 100/100"

[node name="AmmoLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 0
text = "AMMO: 30/30"

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 95.0
offset_right = 200.0
offset_bottom = 115.0
grow_horizontal = 0
text = "COINS: 0"

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "TIME: 0.0"
horizontal_alignment = 2

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_reticle")

[node name="HorizontalLine" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="VerticalLine" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="Center" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.5)

[node name="SaveIndicator" type="Label" parent="."]
modulate = Color(0, 1, 0, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 55.0
offset_right = -20.0
offset_bottom = 85.0
grow_horizontal = 0
horizontal_alignment = 2
